{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 306,
  "lineage": "fb21029d-4a22-e492-f1ec-023c89775286",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:433240000570:loadbalancer/app/my-alb/0e6c42133a17d291",
            "arn_suffix": "app/my-alb/0e6c42133a17d291",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-979144660.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:433240000570:loadbalancer/app/my-alb/0e6c42133a17d291",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-062e9167f0e757160",
              "sg-0d421146b70b2dacb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-d3e09fb4"
              },
              {
                "subnet_id": "subnet-e30d48cd"
              }
            ],
            "subnets": [
              "subnet-d3e09fb4",
              "subnet-e30d48cd"
            ],
            "tags": {
              "Name": "my-alb"
            },
            "tags_all": {
              "Name": "my-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-2a52d950",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:433240000570:listener/app/my-alb/0e6c42133a17d291/82cc0d2367fc9c0d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:433240000570:targetgroup/alb-target-group/422f84cf49a0afcf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:433240000570:listener/app/my-alb/0e6c42133a17d291/82cc0d2367fc9c0d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:433240000570:loadbalancer/app/my-alb/0e6c42133a17d291",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:433240000570:targetgroup/alb-target-group/422f84cf49a0afcf",
            "arn_suffix": "targetgroup/alb-target-group/422f84cf49a0afcf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:433240000570:targetgroup/alb-target-group/422f84cf49a0afcf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alb-target-group"
            },
            "tags_all": {
              "Name": "alb-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-2a52d950"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:security-group/sg-0d421146b70b2dacb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d421146b70b2dacb",
            "ingress": [],
            "name": "my-alb-20230816225951958100000002",
            "name_prefix": "my-alb-",
            "owner_id": "433240000570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-alb"
            },
            "tags_all": {
              "Name": "my-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-2a52d950"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433240000570:security-group/sg-062e9167f0e757160",
            "description": "Security group for user-service with custom ports open within VPC, and PostgreSQL publicly open",
            "egress": [],
            "id": "sg-062e9167f0e757160",
            "ingress": [],
            "name": "web-server-sg-20230816225951958100000001",
            "name_prefix": "web-server-sg-",
            "owner_id": "433240000570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "tags_all": {
              "Name": "web-server-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-2a52d950"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "User-service ports",
            "from_port": 0,
            "id": "sgrule-1688605541",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-062e9167f0e757160",
            "security_group_rule_id": "sgr-0d44ee8f7771d3bb0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1517864189",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-062e9167f0e757160",
            "security_group_rule_id": "sgr-0b86e3acfb59c51ce",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2517192649",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-062e9167f0e757160",
            "security_group_rule_id": "sgr-0b6f5e2807f6387d4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-2819969703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-062e9167f0e757160",
            "security_group_rule_id": "sgr-03243d417270f4f99",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-545460860",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-062e9167f0e757160",
            "security_group_rule_id": "sgr-0d4496b0a677dcf18",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.this",
            "module.security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}